tring to fix x-overflow on body

--- a/style.scss
+++ b/style.scss
@@ -17,7 +17,8 @@ body {
 }
 .sec-1 {
     height: 100%;
-    width: 100vw;
+    width: 98.5vw;
+
     @media screen and (max-width: 992px) {
     }
     background: url('moneyBg1.jpg') center;
